--- a/public/css/style.css
+++ b/public/css/style.css
@@ -365,7 +365,7 @@ body.offcanvas {
     transform: translateX(300px); }
 
 .colorlib-narrow-content {
-  padding: 0 2.5em; }
+  padding: 0 2.3em; }
   @media screen and (max-width: 768px) {
     .colorlib-narrow-content {
       padding: 0; } }
@@ -1589,12 +1589,11 @@ body.offcanvas {
   margin: 20px auto;
   font-size: 60px;
 }
-/* .user p {
+.user p {
   font-size: 16px;
-} */
+}
 @media only screen and (min-width:768px) {
   .user {
-  font-size: 75px;
 }
 }.user-details {
   text-align: center;
